[package]
name = "bilibili_loginless_client"
version = "0.2.0"
authors = ["oelabs_official"]
#Thanks https://blog.csdn.net/qq_42806574/article/details/104109087
edition = "2018"
license = "MPL2.0"

[dependencies]
reqwest = "*"
tokio = { version = "*", features = ["full"] }#需要优化,删除不需要的模块
json = "*"
chrono = "*"
simple-stopwatch = "*"

#egui
egui = "*"
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
serde = { version = "1", features = ["derive"], optional = true }

#egui_design =   { git = "https://github.com/OElabs-official/egui_design"}
egui_design = {path = "/home/akitsuki/文档/code-x/rust/core_utils/egui_design"}
#orbtk = { git ="https://github.com/redox-os/orbtk.git", branch= "develop" }
#[features]
#debug = ["orbtk/debug"]
#sixtyfps = "*"

# [dependencies.gtk]
# version = "*"
# package = "gtk4"
